--- a/inspiration/css/ins5style.css
+++ b/inspiration/css/ins5style.css
@@ -18,11 +18,10 @@ nav{
     gap: 200px;
     font-family: "lilita one", sans-serif;
     font-size: 30px;
+    color: bisque;
 }
-
-h1 {
-    margin: 0;
-    font-size: 2em;
+.header2{
+    color: bisque;
 }
 
 h2{
@@ -31,6 +30,7 @@ h2{
     font-family: "lilita one", sans-serif;
     font-size: 40px;
     color:red;
+    background-color: bisque;
 }
 
 a{
@@ -59,42 +59,27 @@ main {
     padding: 20px;
     border-radius: 8px;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .entry img {
     width: 100%;
-    height: auto;
+    height: 50%;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 10px;
 }
 
-.entry h2 {
-    margin-top: 0;
-}
-
-.entry p {
-    margin: 10px 0;
-}
-
 .entry a {
-    color: #007BFF;
     text-decoration: none;
-    font-weight: bold;
+    color: #0073e6;
+    font-family: "lilita one", sans-serif;
+    font-size: 20px;
 }
 
 .entry a:hover {
     text-decoration: underline;
 }
 
-.link{
-    text-align: center;
-    margin-top: 20px;
-    color: violet;
-}
 
-@media (max-width: 768px) {
-    main {
-        padding: 10px;
-    }
-}
+
