--- a/inspiration/css/ins5style.css
+++ b/inspiration/css/ins5style.css
@@ -66,7 +66,7 @@ main {
     width: 100%;
     height: 50%;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     margin-bottom: 10px;
 }
 
